<resources>
    <string name="app_name">Assessment</string>
    <string name="approval_screen">Approval Screen</string>
    <string name="request_screen">Request Screen</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_my_tab">MyTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="drawerClosed">Closed</string>
    <string name="drawerOpen">Open</string>
    <string name="approval">Approval</string>
    <string name="request">Request</string>
    <string name="logout">Logout</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Approval</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Timeline</string>
</resources>
