<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.njcreatives.www.assesment.MyTabActivity">
    <item
        android:id="@+id/action_approval"
        android:orderInCategory="100"
        android:title="@string/approval"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_black_24dp"
        />
    <item
        android:id="@+id/action_request"
        android:orderInCategory="100"
        android:title="@string/request"
        app:showAsAction="always"
        android:icon="@drawable/ic_contact_phone_black_24dp"
        />



    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="always"
        android:icon="@drawable/ic_chevron_left_black_24dp"
        />
</menu>
