<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.njcreatives.www.assesment.Activities.MainActivity"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approval_screen"
        android:onClick="mainSelection"
        style="@style/MyButtonTheme"
        android:id="@+id/btn_approval"


        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_screen"
        android:onClick="mainSelection"
        style="@style/MyButtonTheme"
        android:id="@+id/btn_request"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:onClick="mainSelection"
        style="@style/MyButtonTheme"
        android:id="@+id/btn_dashboard"

        />















</LinearLayout>
